--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "5.2.2",
-    "vite": "4.4.9"
+    "@tsconfig/node18": "^18.2.0",
+    "@types/node": "^18.17.0",
+    "@vitejs/plugin-legacy": "^4.1.1",
+    "@vitejs/plugin-react": "^4.1.0",
+    "typescript": "^5.2.2",
+    "vite": "4.4.9",
+    "vite-plugin-compression2": "^0.10.3",
+    "vite-plugin-image-optimizer": "^1.1.6"
+  },
+  "dependencies": {
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "less": "^4.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
