--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "excel-utils-bt": "^1.0.6",
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
