--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.17.0",
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-react": "^4.1.0",
+    "svgo": "^3.0.2",
     "typescript": "^5.2.2",
     "vite": "4.4.9",
     "vite-plugin-compression2": "^0.10.3",
